compile-error-output/20143333-compile-output.txt
submitted-assignments/ds_hw_1_20143333.c:3:1: error: unknown type name 'Compile'
Compile error
^
submitted-assignments/ds_hw_1_20143333.c:3:14: error: expected ';' after top level declarator
Compile error
             ^
             ;
2 errors generated.
